services/azure-quiz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-quiz
  namespace: azure-quiz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - azure.completeautomate.com
    secretName: azure-quiz-tls
  rules:
  - host: azure.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: azure-quiz
            port:
              number: 80
        path: /
        pathType: Prefix
